Fixed things with match request and validation
