# BusinessServer/src/main/java/com/example/businessserver/dtos/matching/MatchRequestDTO.java
@@ -3,13 +3,15 @@ package com.example.businessserver.dtos.matching;
 public class MatchRequestDTO {
     private int currentUser;
     private int matchId;
+    private boolean wantToMatch;
 
     public MatchRequestDTO() {
     }
 
-    public MatchRequestDTO(int currentUser, int matchId) {
+    public MatchRequestDTO(int currentUser, int matchId, boolean wantToMatch) {
         this.currentUser = currentUser;
         this.matchId = matchId;
+        this.wantToMatch = wantToMatch;
     }
 
     public int getCurrentUser() {
@@ -18,5 +20,9 @@ public class MatchRequestDTO {
 
     public int getMatchId() {
         return matchId;
+    }
+
+    public boolean isWantToMatch() {
+        return wantToMatch;
     }
 }
