# BusinessServer/src/main/java/com/example/businessserver/logic/interfaces/MatchingLogic.java
@@ -6,7 +6,7 @@ import com.example.businessserver.exceptions.DTOException;
 public interface MatchingLogic {
     SubstituteMatchingDTOs getSubstitutes(SubstituteSearchParametersDTO searchParameters) throws DTOException;
     GigMatchingDTOs getGigs(GigSearchParametersDTO searchParameters) throws DTOException;
-    MatchValidationDTO gigsMatchRequest(MatchRequestDTO matchRequest) throws DTOException;
-    MatchValidationDTO substitutesMatchRequest(MatchRequestDTO matchRequest) throws DTOException;
+    void gigsMatchRequest(MatchRequestDTO matchRequest) throws DTOException;
+    void substitutesMatchRequest(MatchRequestDTO matchRequest) throws DTOException;
 
 }
